# coopy

./: .gitignore  README.md  pyproject.toml
data/: multipred-multiprey.txt  singlepred-multiprey.txt
src/coopy/: __init__.py  core.py  execute.py  experiment.py  run.py  simulator.py  util.py
