[project]
name = "coopy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gideonoludeyi", email = "49620086+gideonoludeyi@users.noreply.github.com"},
]
dependencies = [
    "deap>=1.4.1",
    "numpy>=1.26.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
coopy = "coopy:main"

[tool.pdm]
distribution = true
